# Audit_Forge

./: .env.example  .gitignore  Dockerfile.agent  README.md  auditforge_usecase_diagram.puml  discovery_agent.py  docker-compose.prod.yml  docker-compose.yml  start.ps1
backend/: Dockerfile  config.py  database.py  frozen_paths.py  main.py  requirements.txt
backend/ai/: benchmark_ai.py  copilot_prompts.py  llm_manager.py  prompt_sanitizer.py  prompts.py
backend/alembic/: env.py
backend/api/: ad_discovery.py  analyses.py  auth.py  benchmarks.py  clients.py  configs.py  connect.py  copilot.py  findings.py  health.py  llm.py  missions.py  notifications.py  reports.py  resolve.py  rules.py  saved_reports.py  scans.py  schedules.py  settings.py  targets.py  topology.py  trail.py  ws_agent.py
backend/connectors/: __init__.py  ad_connector.py  base.py  mongodb_connector.py  mssql_connector.py  mysql_connector.py  netmiko_connector.py  oracle_connector.py  postgres_connector.py  sql_guard.py  ssh_connector.py  winrm_connector.py
cli/: pyproject.toml
cli/cli/: __init__.py  __main__.py  api_client.py  auth.py  config.py  display.py  main.py
cli/cli/commands/: __init__.py  report.py  run.py  scan.py  status.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  test_replace.ps1  tsc_errors.txt  tsc_errors_utf8.txt  tsconfig.app.json  vite.config.ts
scripts/: benchmark_status.py  check_quality.py  diff_benchmark_versions.py  enrich_benchmark.py  export_pack.py  fix_and_export_all.py  fix_command_quality.py  validate_all_benchmarks.py  validate_pack.py
(+273 files in other folders)
